# gTest_and_cmake_example

./: .gitmodules  CMakeLists.txt  main.cpp  readme.md
lib/math/: CMakeLists.txt
lib/math/include/: math.hpp
lib/math/src/: math.cpp
lib/math/tests/: add-test.cpp  mainTest.cpp  subtract-test.cpp
